# deckify

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  README.md  docker-compose.yml
.claude/commands/: commit.md  makemigrations.md  pr.md
.claude/rules/: python.md  typescript.md
.claude/skills/makemigrations/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .gitignore  Dockerfile  alembic.ini  config.py  database.py  dependencies.py  main.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  exception_handlers.py
backend/app/api/controllers/: deck.py  deck_controller.py  health.py  health_controller.py
backend/app/api/schemas/: deck.py  deck_schema.py
backend/app/controller/: __init__.py  health_controller.py
backend/app/core/: database.py  dependencies.py
backend/app/core/repositories/: deck_repository.py
backend/app/core/services/: deck_service.py
backend/app/domain/entities/: deck.py  flash_card.py
backend/app/domain/exceptions/: __init__.py  deck_exceptions.py
backend/app/domain/repositories/: deck_repository.py
backend/app/infra/database/: session.py
backend/app/infra/database/models/: __init__.py  deck_model.py
backend/app/infra/database/repositories/: deck_repository.py
backend/app/models/: __init__.py  deck.py
backend/migrations/: env.py
backend/migrations/versions/: 1949ba7f30e4_create_decks_table.py
backend/tests/: conftest.py  test_app.py
backend/tests/e2e/: conftest.py  test_deck.py  test_health.py
backend/tests/unit/api/: test_exception_handlers.py
backend/tests/unit/api/controllers/: test_deck_controller.py  test_health.py  test_health_controller.py
backend/tests/unit/api/schemas/: test_deck.py  test_health.py
backend/tests/unit/controller/: test_health_controller.py
backend/tests/unit/core/services/: test_deck_service.py
backend/tests/unit/domain/entities/: test_deck.py
backend/tests/unit/infra/database/models/: test_deck_model.py
backend/tests/unit/infra/database/repositories/: test_deck_repository.py
backend/tests/unit/models/: test_deck.py
backend/tests/unit/schemas/: test_health.py
frontend/: .prettierrc.json  Dockerfile  biome.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
