[project]
name = "deckify-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
    "taskipy>=1.14.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = ["PLR0913", "PLR0917"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
dev = "uvicorn api.main:app --port 8000 --reload"
lint = "mypy . && ruff check"
test = "pytest -s -x --cov=api -vv"
format = "ruff format"
pre_format = "ruff check --fix"
post_test = "coverage html -d .htmlcov"
